feat: added health check and full test coverage
