# src/main/java/org/tkit/onecx/ai/provider/rs/internal/controllers/ProviderRestController.java
@@ -13,6 +13,7 @@ import jakarta.ws.rs.core.UriInfo;
 
 import org.jboss.resteasy.reactive.RestResponse;
 import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
+import org.tkit.onecx.ai.provider.common.services.llm.LlmServiceFactory;
 import org.tkit.onecx.ai.provider.domain.daos.ProviderDAO;
 import org.tkit.onecx.ai.provider.rs.internal.mappers.ExceptionMapper;
 import org.tkit.onecx.ai.provider.rs.internal.mappers.ProviderMapper;
@@ -40,6 +41,9 @@ public class ProviderRestController implements ProviderInternalApi {
 
     @Inject
     ProviderMapper mapper;
+
+    @Inject
+    LlmServiceFactory llmServiceFactory;
 
     @Override
     public Response createProvider(CreateProviderRequestDTO aiProviderDTO) {
@@ -86,6 +90,17 @@ public class ProviderRestController implements ProviderInternalApi {
             return Response.status(Response.Status.NOT_FOUND).build();
         }
         return Response.ok(mapper.map(provider)).build();
+    }
+
+    @Override
+    public Response getProviderHealthStatus(String id) {
+        var provider = dao.findById(id);
+        if (provider == null) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
+        var healthKey = llmServiceFactory.getProviderHealthStatus(provider);
+
+        return Response.status(Response.Status.OK).entity(mapper.mapHealthStatus(healthKey)).build();
     }
 
     @ServerExceptionMapper
